Closed Bug 875252 Opened 13 years ago Closed 13 years ago

Google+ "Upload from computer" unclickable on Firefox

Categories

(Core :: Layout: Form Controls, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla24
Tracking Status
firefox21 --- unaffected
firefox22 + verified
firefox23 + verified
firefox24 + verified

People

(Reporter: bkerensa, Assigned: smaug)

References

Details

(Keywords: regression)

Attachments

(3 files, 4 obsolete files)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:22.0) Gecko/20100101 Firefox/22.0 (Beta/Release) Build ID: 20130522153407 Steps to reproduce: Try to click on Upload from computer on Google+ Actual results: The button/element is unclickable Expected results: It should be clickable and launch a file browser so I can select and upload photos to Google+
Here is a video showing the issue.... I re-installed Firefox on Ubuntu and checked in two other browsers and can confirm this is specific to Firefox 22 on Ubuntu but also did not occur in earlier versions of Firefox. http://www.youtube.com/watch?v=1IyiOGXjxW4
Severity: normal → major
Could you run mozregression to find a possible regression range and provide the changeset, please. http://harthur.github.io/mozregression/
Flags: needinfo?(bkerensa)
I was unable to find a regression and more specifically I think this is related to the recent major overhaul Google+ did. I think they changed something in their design thats just not meshing well with FF.
Flags: needinfo?(bkerensa)
Attachment #753384 - Flags: review?(armenzg)
Assignee: nobody → sphink
Sorry! Wrong bug.
Assignee: sphink → nobody
Attachment #753384 - Attachment is obsolete: true
Attachment #753384 - Flags: review?(armenzg)
Try Aurora23.0a2. this is duplicate of Bug 52500 if Aurora works fine. (I could not verify the problem because I am no Google+ account)
(In reply to Alice0775 White from comment #7) > Try Aurora23.0a2. this is duplicate of Bug 52500 if Aurora works fine. > (I could not verify the problem because I am no Google+ account) Nooo. I can reproduce /w Nightly as well. Mozilla/5.0 (Windows NT 6.1; rv:24.0) Gecko/20130526 Firefox/24.0
Confirm I can't upload from G+ and Facebook. Firefox 22beta Linux and OS X
OS: Linux → All
Hardware: x86_64 → All
Version: 22 Branch → Trunk
Alice, can you please activate G+ account and narrow down the regression range?
Flags: needinfo?(alice0775)
last Good: f372d9cf7d5c First Bad: 9e55e669d3ac Triggered by: 9e55e669d3ac Mounir Lamouri — Bug 838695 - Move nsFileControlFrame click handling to nsHTMLInputElement. r=smaug
Blocks: 838695
Component: Untriaged → Layout: Form Controls
Flags: needinfo?(alice0775)
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Is that still reproducible in current Nightly? I landed something that, I believe, should have fixed that kind of problems.
(In reply to Mounir Lamouri (:mounir) from comment #12) > Is that still reproducible in current Nightly? I landed something that, I > believe, should have fixed that kind of problems. I can reproduce the problem in latest Nightly http://hg.mozilla.org/mozilla-central/rev/a39263b0c896 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20130527 Firefox/24.0 ID:20130527031027 and http://hg.mozilla.org/mozilla-central/rev/a39263b0c896 Mozilla/5.0 (X11; Linux i686; rv:24.0) Gecko/20130527 Firefox/24.0 ID:20130527031027
(In reply to Mounir Lamouri (:mounir) from comment #12) > Is that still reproducible in current Nightly? I landed something that, I > believe, should have fixed that kind of problems. Still reproducible on mozilla-inbound changeset ce60c6798292 Mozilla/5.0 (Windows NT 6.1; rv:24.0) Gecko/20130528 Firefox/24.0
Sorry, as Alice in comment 7, I assumed the problem was coming from bug 52500. I will need a reduced test case to look into this.
I cannot provide reduced test case. (I think that Google person is best to prepare testcase :)
Assignee: nobody → mounir
(In reply to Mounir Lamouri (:mounir) from comment #15) > Sorry, as Alice in comment 7, I assumed the problem was coming from bug > 52500. I will need a reduced test case to look into this. Please don't wait on a reporter to help with a test - it's really important that we reproduce locally and start investigating as soon as possible, given the size of this web property.
Attachment #755584 - Attachment is obsolete: true
(In reply to Alex Keybl [:akeybl] from comment #17) > (In reply to Mounir Lamouri (:mounir) from comment #15) > > Sorry, as Alice in comment 7, I assumed the problem was coming from bug > > 52500. I will need a reduced test case to look into this. > > Please don't wait on a reporter to help with a test - it's really important > that we reproduce locally and start investigating as soon as possible, given > the size of this web property. Hi Alex, Let me know how to produce a testcase. I am currently now seeing Facebook image upload also does not work although that could be a seperate bug. But yeah the severity of this is pretty high considering the amount of people who visit these two properties.
Priority: -- → P2
Benjamin, could you check if the Facebook problem has the same regression range?
Status: NEW → ASSIGNED
Keywords: testcase-wanted
Attached file Reduced testcase
Attachment #755592 - Attachment is obsolete: true
The problem is that the created HTMLInputElement doesn't have any presContext so we stop early in ::PreHandleEvent() and ::PostHandleEVent(). The reasons why we have those limitations and how easy it would be to remove them are not really known to me. Olli probably knows more. I assume that fixing this for Beta is probably not a good idea. I think there would be two alternatives for Beta (and Aurora?): backing out the patches or override ::Click() to show a file picker if the element doesn't have a prescontext at that time. Olli, would that be a safe workaround?
Flags: needinfo?(bugs)
Related bugs are: - bug 234455 which started preventing events when there is no prescontext; - bug 329509 which seems to be about stopping that.
So how did this work before the changes? bug 329509 is definitely not something for beta.
Flags: needinfo?(bugs)
Could we just put back the old nsHTMLInputElement::Click() ?
(In reply to Olli Pettay [:smaug] from comment #26) > Could we just put back the old nsHTMLInputElement::Click() ? As said in comment 23, I believe this could work. I would be fine with backing out the required patch for Beta and think a bit more for Aurora/Nightly. Note: I am unassigning myslef given that I will be mostly offline until the 12th, feel free te reassign me if it is fine having this being looked at in 10 days.
Assignee: mounir → nobody
I think we have to fix this asap.
Assignee: nobody → bugs
(In reply to Olli Pettay [:smaug] from comment #21) > Benjamin, could you check if the Facebook problem has the same regression > range? I think the FB issue was just a glitch because its working for me now and I have not had any version change on FF.
(In reply to Olli Pettay [:smaug] from comment #28) > I think we have to fix this asap. I totally agree I had hoped there would be a patch out for this by today since its been a few weeks now that I have actually had to use Chromium for photo uploads on G+ and I imagine some users could be contemplating switching completely. Notably a few linux distros like Ubuntu are shipping Firefox 22.0 as stable so this is affecting a very large amount of users probably in the millions.
Attached patch patch (obsolete) — Splinter Review
Mounir is on vacation, so jst could you review? Patches for Bug 838695 and http://mxr.mozilla.org/mozilla-central/source/content/html/content/src/nsGenericHTMLElement.cpp?rev=ff4d7b275942&mark=2807-2807,2813-2820#2806 may help reviewing. I'll write mochitest tomorrow.
Attachment #757187 - Flags: review?(jst)
Attached patch with testsSplinter Review
Attachment #757187 - Attachment is obsolete: true
Attachment #757187 - Flags: review?(jst)
Attachment #757570 - Flags: review?(jst)
Attachment #757570 - Flags: review?(jst) → review+
Attached patch for aurora+betaSplinter Review
[Approval Request Comment] Bug caused by (feature/regressing bug #): bug 838695 User impact if declined: G+, for example, is a bit broken Testing completed (on m-c, etc.): about to land Risk to taking this patch (and alternatives if risky): Should be reasonable safe. Effectively bringing back the old behavior String or IDL/UUID changes made by this patch: NA
Attachment #757658 - Flags: approval-mozilla-beta?
Attachment #757658 - Flags: approval-mozilla-aurora?
lastest from me. FF 22beta Debian Linux Linux mrchoke-debian 2.6.32-5-amd64 #1 SMP Fri May 10 08:43:19 UTC 2013 x86_64 GNU/Linux Google+ not work. Facebook work fine.
This landed to mozilla-inbound yesterday, and should land to mozilla-central today, so the next nightly, or nightly after that should have the fix. Then the patch needs approval before it can land to aurora and beta.
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Attachment #757658 - Flags: approval-mozilla-beta?
Attachment #757658 - Flags: approval-mozilla-beta+
Attachment #757658 - Flags: approval-mozilla-aurora?
Attachment #757658 - Flags: approval-mozilla-aurora+
Verified as fixed on Firefox 22 beta 4: Mozilla/5.0 (Windows NT 6.1; rv:22.0) Gecko/20100101 Firefox/22.0 Mozilla/5.0 (X11; Linux i686; rv:22.0) Gecko/20100101 Firefox/22.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:22.0) Gecko/20100101 Firefox/22.0 Build ID: 20130605070403
Verified as fixed on Firefox 22 beta 4 (22.0~b4+build1-0ubuntu1): Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:22.0) Gecko/20100101 Firefox/22.0
Depends on: 883164
Verified as fixed on Firefox 23 beta 8: Mozilla/5.0 (Windows NT 6.1; rv:23.0) Gecko/20100101 Firefox/23.0 Mozilla/5.0 (X11; Linux i686; rv:23.0) Gecko/20100101 Firefox/23.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:23.0) Gecko/20100101 Firefox/23.0 Build ID: 20130722172257
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:24.0) Gecko/20100101 Firefox/24.0 Mozilla/5.0 (X11; Linux i686; rv:24.0) Gecko/20100101 Firefox/24.0 Mozilla/5.0 (Windows NT 6.2; rv:24.0) Gecko/20100101 Firefox/24.0 Verified as fixed on Firefox 24 beta 6 (buildID: 20130826142034) and latest Nightly (buildID: 20130826190748).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: