Bug 875252, make type=file click() to work (again) even when the element isn't in the DOM, r=jst